Fri Mar 19 15:15:15 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_cvar_set): class variables become private to the
	  particular class/module. [Ruby2]

	* variable.c (rb_cvar_get): ditto.

	* variable.c (rb_cvar_defined): ditto.

Fri Mar 19 11:31:32 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb ($beos, $solaris): add OS flags.

	* lib/mkmf.rb (RUBY): / is not recognized as path separator on
	   nmake/bmake. [ruby-list:39388]

	* lib/mkmf.rb (CLEANLIBS, CLEANOBJS): should remove *.exp with *.so.

Fri Mar 19 01:55:57 2004  Mauricio Fernandez  <batsman.geo@yahoo.com>

	* io.c (rb_io_sync): need not to check writable. [ruby-core:02674]

Thu Mar 18 19:47:44 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* instruby.rb, rubytest.rb: do not depend on srcdir.

Thu Mar 18 18:50:06 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: no longer embed srcdir and compile_dir into
	  rbconfig.rb.

	* ext/extmk.rb, lib/mkmf.rb: obtain top_srcdir and topdir from library
	  paths.

Thu Mar 18 17:46:35 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: do not undef :to_a.

Thu Mar 18 16:22:38 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_eq): avoid false positive by using scope and
	  dyna_vars.  no longer use frame.uniq.

	* eval.c (proc_arity): arity is now defined as number of
	  parameters that would not be ignored. i.e. Proc.new{}.arity
	  returns zero.  update test suites too.

Thu Mar 18 15:27:25 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c: remove specialized version of rb_Array().  use simple
	  one defined in object.c.

	* object.c (Init_Object): remove Kernel#to_a.

	* enum.c (enum_zip): use "to_a" instead of "to_ary".

Wed Mar 17 00:22:03 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* oniguruma.h: imported Oniguruma 2.2.5.
	* regparse.c: ditto.

Tue Mar 16 11:14:17  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (fnmatch_helper): File.fnmatch('\.', '.') should return true.